# REST APIs Design/openapi.json
@@ -965,9 +965,18 @@
           }
         },
         "responses": {
-          "204": {
-            "description": "No Content",
-            "content": {}
+          "201": {
+            "description": "Created",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Review"
+                  }
+                }
+              }
+            }
           },
           "400": {
             "description": "Bad Request",
